src/Node/style.css
.nodeBase {
  cursor: zoom-out;
  fill: lightgray;
  stroke: #000;
  stroke-width: 2;
}

.collapsed {
  cursor: zoom-in;
}

.leafNodeBase {
  fill: white;
  stroke: #000;
  stroke-width: 2;
}

.nodeNameBase {
  font-size: 0.9rem;
  stroke-width: 0.25;
  fill: black;
}

.nodeNameLink {
  cursor: pointer;
  fill: #2a97d2;
  stroke: #2a97d2;
  stroke-width: 1;
}

.nodeAttributesBase {
  fill: #777;
  stroke: #777;
  stroke-width: 0.25;
  font-size: smaller;
}

.copyLink {
  cursor: default;
  text-decoration: underline;
}

